--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Snakie</h1>
-    <canvas width="600" height="600"></canvas>
+    <canvas></canvas>
     <script src="./js/script.js"></script>
   </body>
 </html>
