--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Snakie</title>
   </head>
   <body>
     <h1>Snakie</h1>
+    <div class="score">score: <span class="score--value">00</span></div>
+    <div class="menu-screen">
+      <span class="game-over">Game Over</span>
+      <span class="final-score">Score <span>00</span></span>
+
+      <button class="btn-play">
+        <span class="material-symbols-outlined"> play_circle </span>
+        Jogar Novamente
+      </button>
+    </div>
     <canvas></canvas>
     <script src="./js/script.js"></script>
   </body>
