Update highest score implementado

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <option value="hard">Difícil</option>
       </select>
     </div>
-    <div class="score">score: <span class="score--value">00</span></div>
+    <div class="score-container">
+      <div class="score">Score: <span class="score-value">00</span></div>
+      <div class="highest-score">Highest Score: <span class="highest-score-value">00</span></div>
+    </div>
+
     <div class="menu-screen">
       <span class="game-over">Game Over</span>
       <span class="final-score">Score <span>00</span></span>
